static: fix a bug that hide the background image on iOS safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,7 +117,6 @@ HEADER
 
 .header {
   background: url('../img/bg-banner04.jpg') no-repeat fixed;
-  background-size: cover;
   min-height: 650px;
   position: relative;
 }
